--- a/syte.css
+++ b/syte.css
@@ -1,21 +1,24 @@
+
 .navbarSombra{
     box-shadow: 0px 4px 3px -1px rgba(7, 7, 7, 0.2) !important;
 }
-.contenedor{
+.boxShadow{
     margin: 0.8rem auto  !important;
-    width: 99%;
+    /* width: 99%; */
     box-shadow: 0px 4px 4px 4px rgba(7, 7, 7, 0.2);
     border-radius: 0.2rem;
+    padding: 1rem;
 }
 .fila-1{
     margin: 1rem 0.3rem;
     padding: 0.5rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .fila-2{
     margin: 1rem 0.3rem;
-    display: flex;
+    display: flex !important;
+    /* flex-direction: row !important; */
     justify-content: space-around;
     align-items: center;
     align-self: center;
@@ -26,7 +29,7 @@
     margin: 1 rem 0.4rem;
 }
 #country{
-    width: 35%;
+    width: 100%;
 }
 .box{
     width: 100%;
@@ -52,12 +55,12 @@
 }
 
 .myBox{
-    width: 100%;
+    width: 50% !important;
     padding: 0.5rem;
 }
 .myChart{
-    width: 55% !important;
-    /* height:  30% !important; */
+    /* width: 50%; */
+    height:  100% !important;
 
 }
 .box-4{
@@ -76,3 +79,23 @@
     font-size:10px;
     margin: 0px 0px 0px 8px;
 }
+
+
+#textcovid:before{
+    content: "Coronavirus - COVID19";
+}
+#pfecha{
+    font-size: 14px;
+}
+#pfecha:before{
+    font-size: 12px;
+    content: "Datos confirmados hasta";
+}
+@media (max-width: 550px) {
+    #charts {
+      display: none;
+    }
+    #textcovid:before{
+        content: "COVID-19";
+    }
+  }
